--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1,4 +1,4 @@
-# English strings go here for Rails i18n
+# German strings go here for Rails i18n (author: https://github.com/OliverFriedrich)
 de:
   field_recurrence_of: 'Wiederholung von'
   errors:
